@startuml
left to right direction

' ================= СТИЛЬ =================
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam ArrowColor #444
skinparam package {
  BorderColor #999
  BackgroundColor #F8F9FA
}
skinparam class {
  BorderColor #333
  BackgroundColor #EAF2FF
}

hide methods
hide circle

' ================= БЛОКИ =================

package "👤 Users" {
  class users
  class sessions
}

package "📦 Projects" {
  class projects
  class user_projects
}

package "🔌 Integrations" {
  class integration_tokens
  class project_integrations
}

package "📥 Raw Data" {
  class raw_events
}

package "🧩 Normalized" {
  class jira_issues
  class git_commits
  class git_pull_requests
}

package "📊 Analytics" {
  class project_metrics
  class user_metrics
}

package "🤖 AI / Notifications" {
  class ai_insights
  class notifications
}

' ================= СВЯЗИ =================

' Users → Projects
users --> user_projects
projects --> user_projects

' Projects → Integrations
projects --> project_integrations
integration_tokens --> project_integrations

' Integrations → Raw
project_integrations --> raw_events

' Raw → Normalized
raw_events --> jira_issues
raw_events --> git_commits
raw_events --> git_pull_requests

' Normalized → Analytics
git_commits --> project_metrics
jira_issues --> project_metrics
users --> user_metrics

' Analytics → AI
project_metrics --> ai_insights
users --> notifications

@enduml